--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   height: 100vh;
   background-color: black;
-  color: yellow
+  color: yellow;
 }
 
 code {
